# react-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  boilerplate_config.h.in
src/: CMakeLists.txt
src/app1/: CMakeLists.txt  go.cpp
src/app1/include/: go.h
src/gfx/: CMakeLists.txt  go.cpp
src/gfx/include/: go.h
test/: CMakeLists.txt  main.cpp
test/app1_test/: CMakeLists.txt
test/gfx_test/: CMakeLists.txt  go_test.cpp
tools/bash/: build.sh  conf.sh  run.sh
